2017-03-19  Bruno Haible  <bruno@clisp.org>

	Fix alignment issues on IA64 and with GENERIC64C_HEAPCODES.
	* lispbibl.d (C_CODE_ALIGNMENT, log2_C_CODE_ALIGNMENT): Don't redefine.
	(PSEUDODATA_ALIGNMENT, log2_PSEUDODATA_ALIGNMENT): New macros.
	(PSEUDOCODE_ALIGNMENT, log2_PSEUDOCODE_ALIGNMENT): New macros.
	(make_machine_code): Adjust for GENERIC64C_HEAPCODES.
	(TheMachineCode): Adjust accordingly.
	* spvw.d (verify_pseudodata_alignment): New macro.
	(error_pseudodata_alignment): New function.
	(verify_pseudocode_alignment): Renamed from verify_code_alignment.
	(error_pseudocode_alignment): Renamed from error_code_alignment. Change
	error message.
	(init_memory): Invoke verify_code_alignment, verify_pseudodata_alignment
	respectively.
	* encoding.d (nls_table_t): Align to PSEUDODATA_ALIGNMENT, not 4.

2017-03-19  Bruno Haible  <bruno@clisp.org>

	Fix an autoconf test crash on IA64.
	* m4/mmap.m4: On IA64, don't try to mmap at the address where the
	executable sits.

2017-03-19  Bruno Haible  <bruno@clisp.org>

	Update to the newest gnulib.
	Ran "make -f Makefile.devel build-aux-update gnulib-imported
	build-prerequisites".
	* gllib/*: Update from gnulib.
	* glm4/*: Likewise.
	* aclocal.m4, src/configure: Regenerated.

2017-03-18  Bruno Haible  <bruno@clisp.org>

	Make --enable-portability enable support for any kind of address space.
	* lispbibl.d: Obey flag NO_ADDRESS_SPACE_ASSUMPTIONS. It has the effect
	to enable WIDE_SOFT on 32-bit platforms and disable SINGLEMAP_MEMORY,
	TYPECODES, TRIVIALMAP_MEMORY, CAN_ALLOCATE_8BIT_VECTORS_ON_C_STACK,
	CAN_ALLOCATE_STRINGS_ON_C_STACK.
	* makemake.in (XCFLAGS): Add -DNO_ADDRESS_SPACE_ASSUMPTIONS if
	--enable-portability is specified.

2017-03-18  Bruno Haible  <bruno@clisp.org>

	Avoid code duplication of a condition.
	* lispbibl.d (CAN_ALLOCATE_8BIT_VECTORS_ON_C_STACK,
	CAN_ALLOCATE_STRINGS_ON_C_STACK): New macros.
	(_SP_before_suspend, SET_SP_BEFORE_SUSPEND): Use them.
	* spvw_global.d (is_valid_stack_address): Likewise.